--- a/GameServer/GameServer.vcxproj
+++ b/GameServer/GameServer.vcxproj
@@ -82,6 +82,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <PreprocessorDefinitions>_WINSOCK_DEPRECATED_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -129,10 +130,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="FinalProject.pb.cc" />
+    <ClCompile Include="Main_Server.cpp" />
     <ClCompile Include="UDP_Server.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FinalProject.pb.h" />
+    <ClInclude Include="UDP_Server.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
